# echo-agent

./: .example.env  .gitignore  Cargo.toml  README.md  README.zh.md  config.yml  suggest.md
docs/en/: 01-react-agent.md  02-tools.md  03-memory.md  04-compression.md  05-human-loop.md  06-subagent.md  07-skills.md  08-mcp.md  09-tasks.md  10-streaming.md  11-structured-output.md  12-mock.md  13-chat.md  14-semantic-search.md  README.md
docs/zh/: 01-react-agent.md  02-tools.md  03-memory.md  04-compression.md  05-human-loop.md  06-subagent.md  07-skills.md  08-mcp.md  09-tasks.md  10-streaming.md  11-structured-output.md  12-mock.md  13-chat.md  14-semantic-search.md  README.md
examples/: demo01.rs  demo01_tools.rs  demo02.rs  demo02_tasks.rs  demo03.rs  demo03_approval.rs  demo04.rs  demo04_suagent.rs  demo05_compressor.rs  demo06_mcp.rs  demo07_skills.rs  demo08_external_skills.rs  demo09_file_shell.rs  demo10_streaming.rs  demo11_callbacks.rs  demo12_resilience.rs  demo13_tool_execution.rs  demo14_memory_isolation.rs  demo15_structured_output.rs  demo16_testing.rs  demo17_chat.rs  demo18_semantic_memory.rs  react_agent_01_demo.rs  react_agent_demo.rs  rust_test.rs
skills/code_review/: SKILL.md  checklist.md  style_guide.md
skills/data_analyst/: SKILL.md  report_template.md  statistical_methods.md
skills/web_researcher/: SKILL.md  research_template.md  source_evaluation.md
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: config.rs  mod.rs  planning.rs  react_agent.rs
src/compression/: mod.rs
src/human_loop/: console.rs  mod.rs  webhook.rs  (+1 more)
(+65 files in other folders)
