[package]
name = "demo_react"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
serde_yaml = "0.9.33"
serde = { version = "1.0.228", features = ["derive"] }
lazy_static = "1.4.0"
async-trait = "0.1.89"
