[package]
name = "echo_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
dotenv = "0.15"
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
