[package]
name = "echo_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "stream"] }
async-stream = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
dotenv = "0.15"
futures = "0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
rustyline = "14"
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }